Changed name to approximate-equality.

--- a/qpproximate-equality.cabal
+++ b/qpproximate-equality.cabal
@@ -1,4 +1,4 @@
-Name:                approximately-equal
+Name:                approximate-equality
 Version:             1.0
 License:             BSD3
 License-file:        LICENSE
